Fix teleport related bug

--- a/TrojanMaze/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/TrojanMaze/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"E:/Workspace/WebGLBuild/Build/Build/Build;E:/Workspace/WebGLBuild/Build/Build;E:/Workspace/WebGLBuild/Build;E:/Workspace/WebGLBuild;;;;;;\"}"
+                "value": "{\"m_Value\":\"E:/Workspace/WebGLBuild/Build/Build/Build/Build;E:/Workspace/WebGLBuild/Build/Build/Build;E:/Workspace/WebGLBuild/Build/Build;E:/Workspace/WebGLBuild/Build;E:/Workspace/WebGLBuild;;;;;\"}"
             }
         ]
     }
